--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "fabric": "^6.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/fabric": "^5.3.9",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/toastify-js": "^1.12.3",
